# prompt-compiler

./: Cargo.toml  DESIGN_NOTES.md  README.md
.github/workflows/: blank.yml  rust-tests.yml
examples/: invalid_data.json  sample_data.json  sample_markdown.md  sample_schema.json  sample_text.txt
src/: cache.rs  cli.rs  ingest.rs  lib.rs  main.rs  normalize.rs  rank.rs  render.rs  schema.rs  segment.rs  select.rs  tokenize.rs  types.rs  utils.rs
tests/: cli_tests.rs  integration_tests.rs
