[package]
name = "local-prompt-compiler"
version = "0.1.0"
edition = "2021"
description = "A deterministic local inference utility for compiling text into AI-ready outputs"
authors = ["Local Prompt Compiler"]
license = "MIT"
repository = "https://github.com/example/local-prompt-compiler"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
jsonschema = "0.17"
memmap2 = "0.9"
indicatif = "0.17"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "lpc"
path = "src/main.rs"
